--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ button:hover { background:#d32f2f; }
 <input type="email" id="email" placeholder="Enter Email">
 <button onclick="resetPassword()">Reset Password</button>
 <div class="link">
-<a href="login.html">Back to Login</a>
+<a href="https://icecreamkhamu-tech.github.io/logi/">Back to Login</a>
 </div>
 </div>
 
