--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@ button{background:#4CAF50;color:#fff;border:none;cursor:pointer}
 .sent{background:#DCF8C6;margin-left:auto}
 .received{background:#eee;margin-right:auto}
 #chatArea{height:300px;overflow-y:auto;background:#fff;padding:10px;margin-top:10px;border-radius:8px}
-#suggestions{background:#fff;max-height:200px;overflow-y:auto;}
-.suggestionItem{padding:8px;border-bottom:1px solid #ddd;cursor:pointer;}
-.suggestionItem:hover{background:#eee;}
 .conversationItem{padding:10px;border-bottom:1px solid #ddd;cursor:pointer;}
 .conversationItem:hover{background:#eee;}
 </style>
@@ -31,7 +28,7 @@ button{background:#4CAF50;color:#fff;border:none;cursor:pointer}
   <input id="loginEmail" type="email" placeholder="Email">
   <input id="loginPass" type="password" placeholder="Password">
   <button onclick="login()">Login</button>
-  <a href="#" onclick="showPage('forgotPage')">Forgot Password?</a>
+  <a href="#" onclick="showPage('forgotPage')">Forgot Password?</a><br>
   <a href="#" onclick="showPage('signupPage')">Create Account</a>
 </div>
 
@@ -58,10 +55,9 @@ button{background:#4CAF50;color:#fff;border:none;cursor:pointer}
 <!-- MAIN PAGE -->
 <div id="mainPage" class="container hidden">
   <h2>Messenger</h2>
-  <input type="text" id="searchBox" placeholder="Search user..." oninput="suggestUsers()" onkeydown="handleEnter(event)">
-  <div id="suggestions"></div>
   <h3>Conversations</h3>
   <div id="conversationList"></div>
+  <button onclick="logout()" style="background:#f44336; padding:10px; border:none; color:white; border-radius:5px; width:90%;">Logout</button>
 </div>
 
 <!-- CHAT PAGE -->
@@ -76,7 +72,7 @@ button{background:#4CAF50;color:#fff;border:none;cursor:pointer}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendPasswordResetEmail, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, setDoc, doc, collection, query, getDocs, addDoc, orderBy, onSnapshot, where, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+import { getFirestore, setDoc, doc, collection, query, where, getDocs, addDoc, orderBy, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyDA3y67A-d77q1zwh5_GHtYundQyudvbdc",
@@ -110,7 +106,11 @@ onAuthStateChanged(auth, (user)=>{
 });
 
 window.signup = async ()=>{
-  const name = nameEl.value, mobile = mobileEl.value, email = emailEl.value, pass = passwordEl.value, dob = dobEl.value;
+  const name = document.getElementById("name").value,
+        mobile = document.getElementById("mobile").value,
+        email = document.getElementById("email").value,
+        pass = document.getElementById("password").value,
+        dob = document.getElementById("dob").value;
   try{
     const res = await createUserWithEmailAndPassword(auth,email,pass);
     await setDoc(doc(db,"users",res.user.uid),{uid:res.user.uid,name,mobile,email,dob});
@@ -118,10 +118,10 @@ window.signup = async ()=>{
     showPage('loginPage');
   }catch(e){alert(e.message);}
 };
-const nameEl=document.getElementById("name"),mobileEl=document.getElementById("mobile"),emailEl=document.getElementById("email"),passwordEl=document.getElementById("password"),dobEl=document.getElementById("dob");
 
 window.login = async ()=>{
-  const email=document.getElementById("loginEmail").value,pass=document.getElementById("loginPass").value;
+  const email=document.getElementById("loginEmail").value,
+        pass=document.getElementById("loginPass").value;
   try{
     await signInWithEmailAndPassword(auth,email,pass);
     showPage('mainPage');
@@ -139,65 +139,34 @@ window.resetPass = async ()=>{
 
 window.logout = ()=> signOut(auth);
 
-// Suggest users
-window.suggestUsers = async ()=>{
-  const term = document.getElementById("searchBox").value.toLowerCase();
-  const list = document.getElementById("suggestions");
-  list.innerHTML="";
-  if(term==="") return;
-  const q = query(collection(db,"users"),orderBy("name"));
-  const snapshot = await getDocs(q);
-  snapshot.forEach(docSnap=>{
-    const u = docSnap.data();
-    if(u.name && u.name.toLowerCase().includes(term) && u.uid !== currentUser.uid){
-      const div=document.createElement("div");
-      div.className="suggestionItem";
-      div.textContent=u.name;
-      div.onclick=()=>openChat(u);
-      list.appendChild(div);
-    }
-  });
-};
-
-// Handle enter press
-function handleEnter(e){
-  if(e.key==="Enter") suggestUsers();
-}
-
-// ✅ Updated: Load only conversations with messages
 async function loadConversations(){
   const convList = document.getElementById("conversationList");
-  convList.innerHTML="<b>Loading conversations...</b>";
-
+  convList.innerHTML="";
   const chatsRef = collection(db,"chats");
   const snapshot = await getDocs(chatsRef);
-  convList.innerHTML="";
-
-  const seenUsers = new Set();
+  let addedUsers = new Set();
 
   snapshot.forEach(docSnap=>{
     const chatId = docSnap.id;
     if(chatId.includes(currentUser.uid)){
       const otherId = chatId.replace(currentUser.uid,"").replace("_","");
-      if(!seenUsers.has(otherId)){
-        seenUsers.add(otherId);
-        getDocs(query(collection(db,"users"),where("uid","==",otherId)))
-          .then(userSnap=>{
-            userSnap.forEach(uDoc=>{
-              const u = uDoc.data();
-              const div=document.createElement("div");
-              div.className="conversationItem";
-              div.textContent=u.name;
-              div.onclick=()=>openChat(u);
-              convList.appendChild(div);
-            });
+      if(!addedUsers.has(otherId)){
+        addedUsers.add(otherId);
+        getDocs(query(collection(db,"users"),where("uid","==",otherId))).then(userSnap=>{
+          userSnap.forEach(uDoc=>{
+            const u = uDoc.data();
+            const div=document.createElement("div");
+            div.className="conversationItem";
+            div.textContent=u.name;
+            div.onclick=()=>openChat(u);
+            convList.appendChild(div);
           });
+        });
       }
     }
   });
 }
 
-// Open chat
 async function openChat(u){
   selectedUser=u;
   showPage('chatPage');
@@ -220,7 +189,6 @@ async function openChat(u){
   });
 }
 
-// Send message
 window.sendMessage=async()=>{
   const input=document.getElementById("messageInput");
   if(!selectedUser||!input.value.trim()) return;
@@ -233,7 +201,6 @@ window.sendMessage=async()=>{
   input.value="";
 };
 
-// Back to main
 function backToMain(){
   showPage('mainPage');
 }
